style.css
/* ... */
.twobtn ,button{padding:10px ;
                margin:30px;
                
               cursor:pointer;
               


}
.twobtn ,button:hover{transform: translateY(-5px);
                      
                      transition-duration: 0.2s ;
                      
                    
}



h2{color:rgba(10, 10, 10, 0.492);
    justify-self: center;
  
    text-decoration:underline;
    
}
                             

.card-container{margin: 0px;
               
 
               box-sizing: border-box;
 
               
    
                display:flex;
                justify-content:space-evenly;
                 flex-wrap: wrap;
                margin-top: 100px;
                row-gap: 50px;
                border:1px solid rgba(0, 128, 0, 0.153);
                border-radius: 10px;
            
                background-color: rgba(57, 142, 199, 0.159);
                 background-image:linear-gradient(rgba(57, 142, 199, 0.159), rgba(141, 169, 86, 0.181)),
        url("complaintform.wbp");
                margin-top: 150px;
                padding-top: 100px;
}
.think img{position:absolute;
          
           width:100px;
           border:1px solid;
           border-radius: 100px;
           box-shadow: 10px 10px 10px;
          animation-name: slide;
      animation-duration: 4s ;
      animation-iteration-count: infinite;
      animation-direction:alternate;
      animation-fill-mode:forwards;
      

}


@keyframes slide {
  from {
        transform:scale(1)
  }
  to {
    transform:scale(1.1);
    color:rgb(100, 128, 240);
     box-shadow: 5px -5px 5px;
     
  }
}

@media (max-width: 1024px) {
    .think img {
                    width: 100px;
                    height:auto;

            
    }
}




.heading p{text-align: center;
           font-size: 35px;
           color:white;
           font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 

}
@media (max-width: 768px) {
    .heading p {
                font-size: 20px;
     
                height: auto;
       
    }
}

.card{margin: 0px;
  padding:0px; 
  box-sizing: border-box;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
    
    
    
    width:325px;
      background-color: rgba(137, 43, 226, 0.2);
      box-sizing: border-box;
      border-radius:8px ;
      overflow:hidden;
      box-shadow: 2px 3px 4px rgb(23, 28, 23);
      text-align: center;
}

.card img{margin: 0px;
  padding:10px; 
  box-sizing: border-box;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
    
    
    
    width: 320px;
          height:auto;


}
.card-content{margin: 0px;
  padding:0px; 
  box-sizing: border-box;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
    
    
    
    padding:16px;
              


}

.card-content h3{margin: 0px;
  padding:0px; 
  box-sizing: border-box;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
    
    
    font-size:28px ;
                 margin-bottom:8px ;


}
.card-content p{margin: 0px;
  padding:0px; 
  box-sizing: border-box;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
    
    
    
    color:rgb(24, 23, 23)


}

.card-content .btn{margin: 0px;
  padding:0px; 
  box-sizing: border-box;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
    
    
    
    
    display:inline-block;
                   padding:8px 16px;
                   background-color: black;
                    border-radius: 10px;
                    text-decoration: none;
                   margin-top: 10px;
                   color: white;
}

.imagecollage {display:flex;
                  margin:auto;
                  flex-wrap: wrap;

                  border:1px solid rgb(85, 97, 177);
                  
                  gap:50px;
                  justify-content: center;
                /* background-color: rgba(56, 146, 43, 0.073);*/
                 background-image:linear-gradient(rgba(16, 69, 194, 0.214), rgba(130, 156, 124, 0.614)),
        url("complaintform.wbp");
                 padding-top: 100px;
                 padding-bottom: 100px;
                
                  
}
.imagecollage img{width:300px;
                  height:200px;
                 
               
                 
}

.image h1{font-size:24px;
       


}
.image {display: block;
        border:1px solid rgba(137, 43, 226, 0.651);
        border-radius:7px ;
        padding: 20px;
        max-width: 300px;
        background-color: rgba(108, 100, 134, 0.567);
        transition: 1s ease-in;
    
}

.image img{display: block;
           margin:auto;
           border: 1px solid rgb(194, 173, 173) ;
           border-radius: 5px;
           transition: 0.5s ease-in;
           width:95%;
           height:auto;

}
.image p{font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
        /*padding:10px;*/
        color: rgb(223, 222, 223);
        line-height: 25px;
         
}
.collagetitle h1{position: absolute;
                text-align: start;
               margin-top:25px ;
               margin-left: 180px;
              
               color:rgb(223, 222, 223);
               text-decoration-line: underline;
               font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 

}
.image:hover {transform: translateY(-10px);
               transform:scale(1.2);
              cursor:pointer;
              transition: 2s ease-in;
             
              

}
/* ... */

